--- a/index.html
+++ b/index.html
@@ -180,48 +180,71 @@
                <div class="col-sm-12">
                     <h5 align="left">WORK EXPERIENCE</h5>
                </div> 
-               <div class="col-sm-3 border ">
-                    <div class="row border ">Designation</div>
-                    <div class="row border ">Technical Lead</div>
-                    <div class="row border ">Senior Software Engineer</div>
-                    <div class="row border ">Senior Software Engineer</div> 
-                    <div class="row border ">Technical Lead</div>
-                    <div class="row border ">Senior Analyst Programmer</div>
-                    <div class="row border ">Senior Engineer Development</div>
-                    <div class="row border ">Senior Software Engineer</div>
-                    <div class="row border ">Software Engineer</div>
-                    <div class="row border ">Software Developer</div>
-                    <div class="row border ">Software Trainee</div>
+               <div  class="table-responsive  ">
+                <table class="table border p-0 m-0">
+                    <thead >
+                        <tr>
+                            <th class="border">Designation</th>
+                            <th class="border">Company</th>
+                            <th class="border">Duration</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="border">Technical Lead</td>
+                            <td class="border">Softvine Technology Pvt. Ltd, Nepal</td>
+                            <td class="border">Aug 2018 - Present</td>
+                            
+                        </tr>
+                        <tr>
+                            <td class="border">Senior Software Engineer</td>
+                            <td class="border">Western Digital, Selangor, Malaysia</td>
+                            <td class="border">Feb 2018 - June 2018</td>
+                        </tr>
+                        <tr>
+                            <td class="border">Senior Software Engineer</td>
+                            <td class="border">OSTRIO BERHAD, Selangor, Malaysia</td>
+                            <td class="border">Jan 2017 - Jan 2018</td>
+                        </tr>
+                        <tr>
+                            <td class="border">Technical Lead</td>
+                            <td class="border">ArtechInfosystems Pvt Ltd, India</td>
+                            <td class="border">Nov 2014 - Nov 2015</td>
+                        </tr> 
+                        <tr>
+                            <td class="border">Senior Analyst Programmer</td>
+                            <td class="border">XECOM Information Technologies Pvt. Ltd, India</td>
+                            <td class="border">Jun 2013 - May 2014</td>
+                        </tr>
+                        <tr>
+                            <td class="border">Senior Engineer Development</td>
+                            <td class="border">Opus Software Solutions, India</td>
+                            <td class="border">Dec 2010 - Jan 2013</td>
+                        </tr>
+                        <tr>
+                            <td class="border">Senior Software Engineer</td>
+                            <td class="border">iGATE (Previously Patni Computer), India</td>
+                            <td class="border">Nov 2009 - Jul 2010</td>
+                        </tr>
+                        <tr>
+                            <td class="border">Software Engineer</td>
+                            <td class="border">Raspee Knowledge Network Pvt Ltd, India</td> 
+                            <td class="border">Dec 2008 - Sep 2009</td>
+                        </tr>
+                        <tr>
+                             <td class="border">Software Developer</td>
+                             <td class="border">Iniquus IT Services Pvt. Ltd, India</td>
+                             <td class="border">Oct 2006 - Oct 2008</td>
+                        </tr>
+                        <tr>
+                            <td class="border">Software Trainee</td>
+                            <td class="border">Aurasoft Technology Solution Pvt Ltd, India</td>
+                            <td class="border">Jun 2005 - Oct 2006</td>
+                        </tr>
+                    </tbody>
+                </table>
                </div>
-               <div class="col-sm-4 border ">
-                    <div class="row border ">Company</div>
-                    <div class="row border ">Softvine Technology Pvt. Ltd, Nepal</div>
-                    <div class="row border ">Western Digital, Selangor, Malaysia</div>
-                    <div class="row border ">OSTRIO BERHAD, Selangor, Malaysia</div>
-                    <div class="row border ">ArtechInfosystems Pvt Ltd, India</div>
-                    <div class="row border ">XECOM Information Technologies Pvt. Ltd, India</div>
-                    <div class="row border ">Opus Software Solutions, India</div>
-                    <div class="row border ">iGATE (Previously Patni Computer), India</div>
-                    <div class="row border ">Raspee Knowledge Network Pvt Ltd, India</div>
-                    <div class="row border ">Iniquus IT Services Pvt. Ltd, India</div>
-                    <div class="row border ">Aurasoft Technology Solution Pvt Ltd, India</div>
-               </div>
-               <div class="col-sm-3 border ">
-                    <div class="row border ">Duration</div>
-                    <div class="row border ">Aug 2018 - Present</div>
-                    <div class="row border ">Feb 2018 - June 2018</div>
-                    <div class="row border ">Jan 2017 - Jan 2018</div>
-                    <div class="row border ">Nov 2014 - Nov 2015</div>
-                    <div class="row border  ">Jun 2013 - May 2014</div>
-                    <div class="row border ">Dec 2010 - Jan 2013</div>
-                    <div class="row border ">Nov 2009 - Jul 2010</div>
-                    <div class="row border ">Dec 2008 - Sep 2009</div>
-                    <div class="row border ">Oct 2006 - Oct 2008</div>
-                    <div class="row border ">Jun 2005 - Oct 2006</div>
-                </div>
-                <div class="col-sm-2 border-2">
-               </div>
-        </div>
+           </div>
         <div class="row"><br></div>
         <div class="row">
                <div class="col-sm-12">
