--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
                </div>  
         </div>
         <div class="row">
-            <p>I am born in Kathmandu in middle class family with humble background. My father is an engineer and my mother is a lecturer. My father secured board second in SLC. He is pioneer in his technical field. Due to well-educated environment, I have been an achiever in my school. I have secured first position amongst all sections in my school from class 6 to class 10. I was awarded with Tuition Fee scholarships from grade 6 to grade 10 in my secondary school.
+            <p >I was born in Kathmandu in middle class family with humble background. My father is an engineer and my mother is a lecturer. My father secured board second in SLC. He is pioneer in his technical field. Due to well-educated environment, I was top achiever in my school. I secured first position amongst all class sections in my school from class 6 to class 10. I was awarded with Tuition Fee scholarships from grade 6 to grade 10 in my secondary school.
             </p>
             <p>I have received tuition fee scholarship to study A-Levels in college in England from British Council by winning essay writing completion in the year 1998. While studying A-Levels in college in England, I got opportunity to know British culture. It was great opportunity to live in England for 2 years and complete my A-Level studies.
             </p>
-            <p>I got opportunity to complete my Bachelor degree in Computer Science and Engineering from engineering college in Karnataka, India in the year 2004. IT was emerging during that period. In order to enhance my knowledge, I did certificate on IBM Mainframe, Microsoft Certified Professional in Web Application Development using C#.Net, International Software Quality Test Analyst certificate by ISTQB, Software Quality Test Analyst certificate by Computer Society of India. This wide knowledge in IT gave me opportunity to work in IT companies in India. My main purpose to work in India was to get expose to IT industries. 
+            <p>I got opportunity to complete my Bachelor degree in Computer Science and Engineering from engineering college in Karnataka, India in the year 2004. IT was emerging during that period. In order to enhance my knowledge, I did certificate course on IBM Mainframe, Microsoft Certified Professional in Web Application Development using C#.Net, International Software Quality Test Analyst certificate by ISTQB, Software Quality Test Analyst certificate by Computer Society of India. This wide knowledge in IT gave me opportunity to work in IT companies in India. My main purpose to work in India was to gain good experience working in IT industries. 
             </p>
-            <p>I worked in IT companies from small scale to multinational companies. I started my career as Software Trainee. My technical role got enhanced as I gained experienced. I worked on projects to develop websites and web application. I worked with multinational companies like Patni computer system. I worked as consultancy in multinational companies like Wipro Technologies. While I was working with Patni Computer System in the year 2009, I got opportunity to travel to USA and work at client - BIOTRONIK in Oregon state. BIOTRONIK is a company which manufactures Pacemaker. While I was working with Opus Software Solution Pvt. Ltd in the year 2010, I got opportunity to travel to Australia and work at client – Wester Union, Sydney for 2 months. I got opportunity to travel to USA and work at client – Western Union, New Jersey for 6 months.    
+            <p>I worked in IT companies from small scale to multinational companies. I started my career as Software Trainee. My technical role got enhanced as I gained experiences. I worked on projects to develop websites and web application. I worked with multinational companies like Patni computer system. I worked as consultancy in multinational companies like Wipro Technologies. While I was working with Patni Computer System in the year 2009, I got opportunity to travel to USA and work at client - BIOTRONIK, Inc. in Oregon state. BIOTRONIK, Inc. is a company which manufactures Pacemaker. While I was working with Opus Software Solution Pvt. Ltd. in the year 2010, I got opportunity to travel to Australia and work at client location - Wester Union, Sydney for 2 months. I got opportunity to travel to USA and work at client location - Western Union, New Jersey for 6 months.    
             </p>
-            <p>While working at client Wipro Technologies, I worked on projects for Credit Suisse. While working at Opus Software solution Pvt Ltd, I worked on projects for Western Union. While working at Patni Computer System Pvt. Ltd., I worked at projects for BIOTRONIK and so on. I have equal opportunity to work in multiple IT domains like e-commerce, money exchange, tour & travel, finance, medical, etc. 
+            <p>While working at client location - Wipro Technologies, India,  I worked on projects for the bank - Credit Suisse. While working at Opus Software solution Pvt Ltd, I worked on projects for Western Union. While working at Patni Computer System Pvt. Ltd., I worked at projects for BIOTRONIK, Inc. and so on. I have equal opportunity to work in multiple IT domains like e-commerce, money exchange, tour & travel, finance, medical, etc. 
             </p>
-            <p>After my IT experience in India for a decade, I returned to my motherland Nepal. While I was exploring IT opportunity in Nepal, I got job offer to work in IT company in Malaysia. In order to get diverse knowledge and experience in IT field, I worked in a small scale company in Malaysia. I worked in multinational company - Western Digital in Malaysia too. I got experience in applications/domains like Private Equity, Digitals.
+            <p>I worked in projects for different clients - Liquidity Services Inc., Washigton ; Smart Currency Exchange, London; Street Level Enterprises, London; The Unusual Company Ltd., UK; ExpensiveTaste, UK; ExpensiveTaste, UK</p>
+            <p>After working in IT companies in India for a decade, I returned to my motherland Nepal. While I was exploring IT opportunity in Nepal, I got job offer to work in IT company in Malaysia. In order to get diverse knowledge and experience in IT field, I worked on ERP application as a technical lead in IT comapny - OSTRIO BERHAD, Malaysia. I worked in multinational company - Western Digital in Malaysia too. I got experience in applications/domains like Private Equity, Digitals.
             </p>
             <p>While working abroad I got opportunity to travel many countries like USA, Australia, UK, France, Thailand, Malaysia, Singapore, Indonesia, India.
             </p>
@@ -45,9 +46,9 @@
             </p>
             <p>I am always keen to upgrade my technical skills. Definitely I will be contributing my Artificial Intelligence knowledge for enhancement of IT industry here. Side by side I have been giving my knowledge on Artificial Intelligence to IT developers here.
             </p>
-            <p>At present, I am working out plan to develop online portal for CAREGIVERS and had been communicating with concerned department. This application I will be developing for good cause. I had meeting with NGOs who take care of the differently abled people.
+            <p>At present, I am working out plan to develop online portal for CAREGIVERS and had been communicating with concerned department. I will be developing this Caregiver application for good cause. I met NGO who take care of the differently abled people.
             </p>
-            <p>With my expertise, it was my pleasure to serve my nation in the field of Information Technology and Artificial Intelligence.
+            <p>With my expertise, it is my pleasure to serve my nation in the field of Information Technology and Artificial Intelligence.
             </p>
             <p>For more details about me, please find below my portfolio.
             </p>
@@ -390,7 +391,7 @@
                     </ul>
                     <h7 align="left"><strong>Noteworthy Accomplishments</strong></h7>
                     <ul>
-                        <li>Visited client location - <strong>BIOTRONIK, Oregon, USA</strong> for 2 months on training purpose</li> 
+                        <li>Visited client location - <strong>BIOTRONIK, Inc., Oregon, USA</strong> for 2 months on training purpose</li> 
                     </ul>
                 </div>
         </div>
@@ -682,7 +683,7 @@
                </div>
                <div class="col-sm-12"><strong> Organization: Patni Computer System Pvt. Ltd., India<br>
                     Duration: 7 months
-                    Client: Biotronik, Oswego, Oregon, USA
+                    Client: Biotronik, Inc., Oswego, Oregon, USA
                     Role: Developer / Tester  <br>
                     Technology used: Visual Studio 2008 - Nunit, C#<br>
                     Project Details & Responsibilities<br></strong>
