--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             </p>
             <p>I got opportunity to complete my Bachelor degree in Computer Science and Engineering from engineering college in Karnataka, India in the year 2004. IT was emerging during that period. In order to enhance my knowledge, I did certificate course on IBM Mainframe, Microsoft Certified Professional in Web Application Development using C#.Net, International Software Quality Test Analyst certificate by ISTQB, Software Quality Test Analyst certificate by Computer Society of India. This wide knowledge in IT gave me opportunity to work in IT companies in India. My main purpose to work in India was to gain good experience working in IT industries. 
             </p>
-            <p>I worked in IT companies from small scale to multinational companies. I started my career as Software Trainee. My technical role got enhanced as I gained experiences. I worked on projects to develop websites and web application. I worked with multinational companies like Patni computer system. I worked as consultancy in multinational companies like Wipro Technologies. While I was working with Patni Computer System in the year 2009, I got opportunity to travel to USA and work at client - BIOTRONIK, Inc. in Oregon state. BIOTRONIK, Inc. is a company which manufactures Pacemaker. While I was working with Opus Software Solution Pvt. Ltd. in the year 2010, I got opportunity to travel to Australia and work at client location - Wester Union, Sydney for 2 months. I got opportunity to travel to USA and work at client location - Western Union, New Jersey for 6 months.    
+            <p>I worked in IT companies from small scale to multinational companies. I started my career as Software Trainee. My technical role got enhanced as I gained experiences. I worked on projects to develop websites and web application. I worked with multinational companies like Patni computer system Pvt. Ltd. I worked as consultancy in multinational companies like Wipro Technologies. While I was working with Patni Computer System Pvt. Ltd. in the year 2009, I got opportunity to travel to USA and work at client - BIOTRONIK, Inc. in Oregon state. BIOTRONIK, Inc. is a company which manufactures Pacemaker. While I was working with Opus Software Solution Pvt. Ltd. in the year 2010, I got opportunity to travel to Australia and work at client location - Wester Union, Sydney for 2 months. I got opportunity to travel to USA and work at client location - Western Union, New Jersey for 6 months.    
             </p>
             <p>While working at client location - Wipro Technologies, India,  I worked on projects for the bank - Credit Suisse. While working at Opus Software solution Pvt Ltd, I worked on projects for Western Union. While working at Patni Computer System Pvt. Ltd., I worked at projects for BIOTRONIK, Inc. and so on. I have equal opportunity to work in multiple IT domains like e-commerce, money exchange, tour & travel, finance, medical, etc. 
             </p>
-            <p>I worked in projects for different clients - Liquidity Services Inc., Washigton ; Smart Currency Exchange, London; Street Level Enterprises, London; The Unusual Company Ltd., UK; ExpensiveTaste, UK; ExpensiveTaste, UK</p>
-            <p>After working in IT companies in India for a decade, I returned to my motherland Nepal. While I was exploring IT opportunity in Nepal, I got job offer to work in IT company in Malaysia. In order to get diverse knowledge and experience in IT field, I worked on ERP application as a technical lead in IT comapny - OSTRIO BERHAD, Malaysia. I worked in multinational company - Western Digital in Malaysia too. I got experience in applications/domains like Private Equity, Digitals.
+            <p>I worked in projects for different clients - Liquidity Services Inc., Washington ; Smart Currency Exchange, London; Street Level Enterprises, London; The Unusual Company Ltd., UK; Expensive Taste, UK; </p>
+            <p>After working in IT companies in India for a decade, I returned to my motherland Nepal. While I was exploring IT opportunity in Nepal, I got job offer to work in IT company in Malaysia. In order to get diverse knowledge and experience in IT field, I worked on ERP application as a technical lead in IT company - OSTRIO BERHAD, Malaysia. I worked in multinational company - Western Digital in Malaysia too. I got experience in applications/domains like Private Equity, Digitals.
             </p>
             <p>While working abroad I got opportunity to travel many countries like USA, Australia, UK, France, Thailand, Malaysia, Singapore, Indonesia, India.
             </p>
@@ -224,7 +224,7 @@
                         </tr>
                         <tr>
                             <td class="border">Senior Software Engineer</td>
-                            <td class="border">iGATE (Previously Patni Computer), India</td>
+                            <td class="border">Patni Computer System Pvt. Ltd., India</td>
                             <td class="border">Nov 2009 - Jul 2010</td>
                         </tr>
                         <tr>
@@ -373,7 +373,7 @@
         </div>
         <div class="row">
                <div class="col-sm-12">
-                    <h7 align="left"><strong>Company Name: iGATE (Previously Patni Computer), India  </strong></h7>
+                    <h7 align="left"><strong>Company Name: Patni Computer System Pvt. Ltd., India  </strong></h7>
                </div>
                <div class="col-sm-12">Designation: Senior Software Engineer<br>
                     Duration: Nov 2009 - Jul 2010<br>
@@ -844,7 +844,7 @@
                     Project Details & Responsibilities<br></strong>
                     UHOTW (Unusual Hotels of the World) is the online guide for travelers interested in staying somewhere truly different. In Site, what I have done is designing and coding Join the Guide page. What I have done next is creating the Unusual Hotels of the world newsletter once in every three months and creating a mailer to send the newsletter to UHOTW newsletter subscribers. What I have done is creating stat counter report and mailing the report to client. I have done coding for click tracking of various links in the site. The click tracking is done to know the traffic in the site.
 
-                    In admin, what I have done is making new hotel entries. I have worked on new module ‘Contributor Comments’. It will display the list of comments made by the visitors for the hotel contributors. I have worked on generating the ‘Terms and Conditions’ page for the hotel. In order to display the hotel in the site the hotel has to agree terms and conditions. I have worked on generating the mailer for the stat counter for individual hotel. The stat counter shows the number of visitors, who has visited the hotel website through our site UHOTW.
+                    In admin, what I have done is making new hotel entries. I have worked on new module 'Contributor Comments'. It will display the list of comments made by the visitors for the hotel contributors. I have worked on generating the ‘Terms and Conditions’ page for the hotel. In order to display the hotel in the site the hotel has to agree terms and conditions. I have worked on generating the mailer for the stat counter for individual hotel. The stat counter shows the number of visitors, who has visited the hotel website through our site UHOTW.
                     <br>
                     <ul>
                         <li>	Coding</li>
@@ -859,11 +859,11 @@
         </div>
         <div class="row">
                <div class="col-sm-12">
-                    <h7 align="left"><strong>Project Title: ExpensiveTaste    </strong></h7>
+                    <h7 align="left"><strong>Project Title: Expensive Taste    </strong></h7>
                </div>
                <div class="col-sm-12"><strong> Organization: Iniquus IT Services Pvt Ltd, India<br>
                     Duration: 12 months<br>
-                    Client: ExpensiveTaste, UK<br>
+                    Client: Expensive Taste, UK<br>
                     Role: Developer  <br>
                     Technology used: Visual Studio 2005, C#, ASP.NET 1.1, SQL Server 2005<br>
                     Project Details & Responsibilities<br></strong>
