--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <li><h7>Client Relationship Management</h7></li>
                         <li><h7>Requirement/Impact Analysis</h7></li>
                         <li><h7>Team Management</h7></li>
-                    </ul>
+                    </https://drive.google.com/file/d/11bmmh9fj-L6wiT_4X1INRWFAM8GVPoFX/viewul>
                </div>
         </div>
         <div class="row">
@@ -199,7 +199,7 @@
                         </tr>
                         <tr>
                             <td class="border">Senior Software Engineer</td>
-                            <td class="border">Western Digital, Selangor, Malaysia</td>
+                            <td class="border">GMA Tech Consulting Sdn Bhd, Selangor, Malaysia</td>
                             <td class="border">Feb 2018 - June 2018</td>
                         </tr>
                         <tr>
@@ -262,12 +262,14 @@
                     </ul>
                 </div>
         </div>
+
         <div class="row">
                <div class="col-sm-12">
-                    <h7 align="left"><strong>Company Name: Western Digital, Selangor, Malaysia </strong></h7>
+                    <h7 align="left"><strong>Company Name: GMA Tech Consulting SDN BHD, Selangor, Malaysia  </strong></h7>
                </div>
                <div class="col-sm-12">Designation: Senior Software Engineer<br>
                     Duration: Feb 2018 - June 2018<br>
+                    <strong>Worked at Client location - Western Digital (M) Sdn Bhd</strong><br>
                     Roles & Responsibilities:<br>
                     <ul>
                         <li>Handled different modules of the ERP project independently as a lead</li> 
@@ -446,7 +448,7 @@
         </div>
         <div class="row">
                <div class="col-sm-12">
-                    <h7 align="left"><strong>Project Title: Metro Vehicle Drier Rental Web Application </strong></h7>
+                    <h7 align="left"><strong>Project Title: Metro Vehicle Driver Rental Web Application </strong></h7>
                </div>
                <div class="col-sm-12"><strong> Softvine Technology Pvt. Ltd.<br>
                     Role: Team Lead <br>
@@ -479,9 +481,37 @@
         </div>
         <div class="row">
                <div class="col-sm-12">
+                    <h7 align="left"><strong>Project Title: Customer Purchase Behavior Analysis & Prediction for Amazon </strong></h7>
+               </div>
+               <div class="col-sm-12"><strong> E&ICT Academy, IIT Kanpur<br>
+                    Role: online course project <br>
+                    Technology used: PYTHON, Jupyter Notebook<br>
+                    Project Details & Responsibilities<br></strong>
+                    Roles & Responsibilities:<br>
+                    The goal of this project is to develop Machine Learning models to segment customers, predict their future spending, and classify them as potential churners or active customers. However, before building ML models, we need to clean and preprocess the data to ensure accuracy.<br>
+                    Build the project using PYTHON
+                    <ul>
+                            <li>	Identifying high-value customers for targeted marketing. </li>
+                            <li>	Predicting Customer Lifetime Value (CLV) to improve revenue forecasting.</li>
+                            <li>	Understanding customer churn risks and improving retention strategies. </li>
+                            <li>	Grouping customers into actionable segments based on behavior patterns. </li>
+                    </ul>        
+                    Following Deliverables are implemented <br>
+                    <ul>
+                            <li>	Cleaned dataset with new features (CLV, Loyalty Score, etc.). </li>
+                            <li>	K-Means Clustering for customer segmentation. </li>
+                            <li>	Linear Regression model for CLV prediction. </li>
+                            <li>	Logistic Regression model for churn prediction. </li>
+                            <li>	Jupyter Notebook with all models & findings.</li>
+                    </ul>
+                </div>
+                <div><br></div>
+        </div>
+        <div class="row">
+               <div class="col-sm-12">
                     <h7 align="left"><strong>Project Title: Western Digital Internal Application </strong></h7>
                </div>
-               <div class="col-sm-12"><strong> Organization: Western Digital<br>
+               <div class="col-sm-12"><strong> Client: Western Digital (M) Sdn Bhd, Selangor, Malaysia<br>
                     Role: Senior Software Engineer  <br>
                     Technology used: C#.NET, VB.NET, SQL Server<br>
                     Project Details & Responsibilities<br></strong>
