--- a/index.html
+++ b/index.html
@@ -484,11 +484,12 @@
                     <h7 align="left"><strong>Project Title: Customer Purchase Behavior Analysis & Prediction for Amazon </strong></h7>
                </div>
                <div class="col-sm-12"><strong> E&ICT Academy, IIT Kanpur<br>
-                    Role: online course project <br>
+                    Role: Internship <br>
+                    Designed on: Artificial Intelligence
                     Technology used: PYTHON, Jupyter Notebook<br>
                     Project Details & Responsibilities<br></strong>
                     Roles & Responsibilities:<br>
-                    The goal of this project is to develop Machine Learning models to segment customers, predict their future spending, and classify them as potential churners or active customers. However, before building ML models, we need to clean and preprocess the data to ensure accuracy.<br>
+                    The project is designed on Artificial Intelligence. The goal of this project is to develop Machine Learning models to segment customers, predict their future spending, and classify them as potential churners or active customers. However, before building ML models, we need to clean and preprocess the data to ensure accuracy.<br>
                     Build the project using PYTHON
                     <ul>
                             <li>	Identifying high-value customers for targeted marketing. </li>
