--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </p>
             <p>Recently I have received online course certificate - PYTHON for Artificial Intelligence Machine Language and Deep Learning from IIT Kanpur. I have received online course certificate on Artificial Intelligence from E&ICT Academy, IIT Kanpur Certificate. I have received online course certificate -PH125.8x: Data Science: Machine Learning, a course offered by HarvardX, an online learning initiative of Harvard University.
             </p>
-            <p>I am always keen to upgrade my technical skills. Definitely I will be contributing my Artificial Intelligence knowledge for enhancement of IT industry here. Side by side I have been giving my knowledge on Artificial Intelligence to IT developers here.
+            <p>I am always keen to upgrade my technical skills. Definitely I will be contributing my Artificial Intelligence knowledge for enhancement of IT industry here. 
             </p>
             <p>At present, I am working out plan to develop online portal for CAREGIVERS and had been communicating with concerned department. I will be developing this Caregiver application for good cause. I met NGO who take care of the differently abled people.
             </p>
