--- a/index.html
+++ b/index.html
@@ -172,8 +172,10 @@
                </div>  
                <div class="col-sm-12">
                 <ul>
-                    <li><h7>Full-Tuition fee Scholarship from grade 6 – grade 10 by Gyanodaya Bal Batika Higher Secondary School </h7></li>
-                    <li><h7>Tuition fee Scholarship by British Council to study A-Levels in Abbey International School, Worcestershire, England</h7></li>
+                    <li>	Full-Tuition fee Scholarship from grade 6 - grade 10 by Gyanodaya Bal Batika Higher Secondary School </li>
+                    <li>	Full-Tuition fee Scholarship by the Abbey College, England</li>
+                    <li>	Partial Tuition-fee Scholarship by the Abbey College, England. The selection process has been registered by the British Council, Kathmandu</li>
+                    <li>	Best Effort Certificate during Spring Term 2000 by Abbey College, England</li>
                </ul>
                 </div>
         </div>
