--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="row">
               <div class="col-sm-12">
-                <h5 align="left"></h5>
+                <h5 align="left">Name: RESHA SHRESTHA</h5>
                </div> 
                <div class="col-sm-12">
                 <h5 align="left">Expertise: Information Technology and Artificial Intelligence</h5>
@@ -167,7 +167,7 @@
                 </div>
         </div>
         <div class="row">
-               <div class="col-sm-12">
+               <div class="co   l-sm-12">
                     <h5 align="left">SCHOLALRSHIP</h5>
                </div>  
                <div class="col-sm-12">
